--- a/index.html
+++ b/index.html
@@ -1,18 +1,10 @@
 <html>
   <head>
-    <title>T.T</title>
+    <title>GSR while practicing clarinet</title>
     <script src="jquery.min.js"></script>
     <script src="underscore-min.js"></script>
     <script src="index.js"></script>
   </head>
   <body>
-    <p style="float:right; font-family:helvetica, sans-serif;">
-      Animal Collective &mdash; Peacebone
-      <br/>
-      GSR recording while listening
-    </p>
-    <!--
-    <audio autoplay="true" controls src="http://localhost:8000/animal_collective_peacebone.mp3"></audio>
-    -->
   </body>
 </html>
