refactoring and scaffolding. separate function for loading json data. separate function for loading audio buffer. nicer way to do templates.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,17 @@
     <title>GSR while practicing clarinet</title>
     <script src="jquery.min.js"></script>
     <script src="underscore-min.js"></script>
+    <script src="underscore_templates.js"></script>
+    <script src="soundvis.js"></script>
     <script src="index.js"></script>
   </head>
   <body>
+    <div id="soundvis"></div>
+
+    <script data-name="loading" type="underscore/template">
+      <div id="loading">
+        loading...
+      </div>
+    </script>
   </body>
 </html>
