--- a/index.html
+++ b/index.html
@@ -1,19 +1,17 @@
 <html>
   <head>
     <title>GSR while practicing clarinet</title>
-    <script src="jquery.min.js"></script>
-    <script src="underscore-min.js"></script>
-    <script src="underscore_templates.js"></script>
-    <script src="soundvis.js"></script>
-    <script src="index.js"></script>
+
+    <!-- external libraries -->
+    <script src="jquery.min.js" type="text/javascript"></script>
+    <script src="underscore-min.js" type="text/javascript"></script>
+
+    <!-- my files -->
+    <link rel="stylesheet" type="text/css" href="soundvis.css">
+    <script src="soundvis.js" type="text/javascript"></script>
+    <script src="index.js" type="text/javascript"></script>
   </head>
   <body>
-    <div id="soundvis"></div>
 
-    <script data-name="loading" type="underscore/template">
-      <div id="loading">
-        loading...
-      </div>
-    </script>
   </body>
 </html>
