trying out a simple stacked bars thing with d3. no real data being used yet.

--- a/index.html
+++ b/index.html
@@ -2,16 +2,18 @@
   <head>
     <title>GSR while practicing clarinet</title>
 
-    <!-- external libraries -->
-    <script src="jquery.min.js" type="text/javascript"></script>
-    <script src="underscore-min.js" type="text/javascript"></script>
-
-    <!-- my files -->
     <link rel="stylesheet" type="text/css" href="soundvis.css">
-    <script src="soundvis.js" type="text/javascript"></script>
-    <script src="index.js" type="text/javascript"></script>
   </head>
   <body>
 
+    <div id="fft-viz-container">
+
+    </div>
+
+    <script src="jquery.min.js" type="text/javascript"></script>
+    <script src="underscore-min.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.14/d3.min.js" type="text/javascript"></script>
+    <script src="soundvis.js" type="text/javascript"></script>
+    <script src="index.js" type="text/javascript"></script>
   </body>
 </html>
